build: add MPS 2025.1 compatibility
Make the project build and test against MPS 2025.1 while keeping 2024.1
as the default. Ports the build-infrastructure changes from the recent
modelix.core MPS 2025.1 migration.

- CopyMps.kt: add 2025.1 (and 2024.3) to the version map; sanitize the
  product-info.json that MPS 2025.1 ships so gradle-intellij-plugin 1.x
  can fork the test JVM; add configureMpsTestClasspath/configureMpsTestTask
  helpers (gated to platform >= 251) for booting MPS tests in-process.
- Raise plugin untilBuild from 241.* to 251.* in all MPS subprojects.
- Wire the test helpers into projectional-editor-ssr-mps-languages.
- Add 2025.1 to the MPS compatibility CI matrix.

The source-level adapter fixes from the core migration (getFileSystem
return type, stepIntoArchive, removeChild null-guard) already ship in
modelix.core 19.1.0, which this project depends on, so no source changes
were needed here.

Verified: full compatibility build + 25 in-process MPS tests pass on both
2025.1 and 2024.1.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>